@@ -1,3 +1,8 @@
+2010-05-28  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-15-05
+	* added interface to inject CRC error and CRC error message via sentinel
+
 2010-05-17  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-15-04
